--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   http: ^1.0.0
+  rxdart: ^0.27.7
+  dio: ^5.2.1+1
 
 dev_dependencies:
   flutter_test:
